--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,60 +4,70 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/stand"
+    android:background="@color/white"
     tools:context=".MainActivity">
+
+    <androidx.constraintlayout.widget.Guideline
+        app:layout_constraintGuide_percent="0.15"
+        android:id="@+id/guideline_H_25"
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp" />
+    <androidx.constraintlayout.widget.Guideline
+        app:layout_constraintGuide_percent="0.35"
+        android:id="@+id/guideline_H_35"
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_V_10"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.10" />
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_V_65"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.65" />
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_V_90"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.90" />
 
 
     <TextView
-        android:id="@+id/tv_Real"
-        android:layout_width="240dp"
-        android:layout_height="63dp"
-        android:layout_marginTop="160dp"
-        android:autoSizeMaxTextSize="100sp"
-        android:autoSizeMinTextSize="50sp"
-        android:autoSizeStepGranularity="2sp"
-        android:autoSizeTextType="uniform"
-
-        android:fontFamily="@font/alter_stand"
-        android:gravity="center"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:text="@string/frequently_used"
-        android:textColor="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:fontFamily="@font/alter_stand"
+        android:textColor="@color/stand_main"
+        android:textSize="100sp"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toBottomOf="@id/guideline_H_35"
+        app:layout_constraintLeft_toLeftOf="@id/guideline_V_10"
+        app:layout_constraintRight_toRightOf="@id/guideline_V_90"
+        app:layout_constraintTop_toTopOf="@id/guideline_H_25" />
 
     <TextView
         android:id="@+id/tv_D"
-        android:layout_width="90dp"
-        android:layout_height="60dp"
-        android:layout_marginBottom="3dp"
-        android:textSize="50sp"
-        android:fontFamily="@font/alter_stand"
-        android:gravity="center"
-        android:text="D"
-        android:textColor="@color/white"
-        android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_Real"
-        app:layout_constraintEnd_toEndOf="@+id/tv_Real"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tv_Real" />
-
-    <TextView
-        android:id="@+id/tv_eveloper"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginTop="160dp"
-        android:textSize="30sp"
-        android:fontFamily="@font/alter_stand"
-        android:gravity="center"
-        android:text="eveloper"
-        android:textColor="@color/white"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:visibility="gone"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="d"
+        android:fontFamily="@font/alter_stand"
+        android:textColor="@color/stand_gray"
+        android:textSize="100sp"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toBottomOf="@id/guideline_H_35"
+        app:layout_constraintLeft_toLeftOf="@id/guideline_V_65"
+        app:layout_constraintRight_toRightOf="@id/guideline_V_90"
+        app:layout_constraintTop_toTopOf="@id/guideline_H_25" />
+
 
     <Button
         android:id="@+id/button"
@@ -67,5 +77,14 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/button" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
