--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="stand_main">#2196F3</color>
+    <color name="stand_main">#62B5F6</color>
     <color name="stand_gray">#57555A</color>
 
 </resources>
